--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,5 +10,10 @@
 <body>
 	<h1>Main page</h1>
 	<hr>
+	<form method="post" action="/print" enctype="multipart/form-data">
+		<label>Upload a file to print:</label><br>
+		<input type="file" name="file" /><br>
+		<input type="submit" />
+	</form>
 </body>
 </html>
